engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__entities__two_fields-graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"price\" ]\n    2 [ label = \"category\" ]\n    3 [ label = \"products\" ]\n    4 [ label = \"Root#category\", shape=box, color=blue ]\n    5 [ label = \"products@Root#category\", shape=box, style=dashed, color=blue ]\n    6 [ label = \"Root#name\", shape=box, color=blue ]\n    7 [ label = \"products@Root#name\", shape=box, style=dashed, color=blue ]\n    8 [ label = \"Root#price\", shape=box, color=blue ]\n    9 [ label = \"products@Root#price\", shape=box, style=dashed, color=blue ]\n    10 [ label = \"FedEntity#category\", shape=box, color=blue ]\n    11 [ label = \"category@FedEntity#category\", shape=box, style=dashed, color=blue ]\n    12 [ label = \"price@Root#price\", shape=box, style=dashed, color=blue ]\n    13 [ label = \"FedEntity#price\", shape=box, color=blue ]\n    14 [ label = \"price@FedEntity#price\", shape=box, style=dashed, color=blue ]\n    15 [ label = \"category@Root#category\", shape=box, style=dashed, color=blue ]\n    16 [ label = \"*id\" ]\n    17 [ label = \"id@Root#category\", shape=box, style=dashed, color=blue ]\n    18 [ label = \"id@Root#name\", shape=box, style=dashed, color=blue ]\n    19 [ label = \"id@Root#price\", shape=box, style=dashed, color=blue ]\n    0 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 4 [ label = \"\", style=dashed ]\n    4 -> 5 [ label = \"\", color=blue,fontcolor=blue ]\n    5 -> 3 [ label = \"\", color=turquoise ]\n    0 -> 6 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 6 [ label = \"\", style=dashed ]\n    6 -> 7 [ label = \"\", color=blue,fontcolor=blue ]\n    7 -> 3 [ label = \"\", color=turquoise ]\n    0 -> 8 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 8 [ label = \"\", style=dashed ]\n    8 -> 9 [ label = \"\", color=blue,fontcolor=blue ]\n    9 -> 3 [ label = \"\", color=turquoise ]\n    3 -> 2 [ label = \"\" ]\n    9 -> 10 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    3 -> 10 [ label = \"\", style=dashed ]\n    10 -> 11 [ label = \"\", color=blue,fontcolor=blue ]\n    11 -> 2 [ label = \"\", color=turquoise ]\n    3 -> 1 [ label = \"\" ]\n    9 -> 12 [ label = \"\", color=blue,fontcolor=blue ]\n    12 -> 1 [ label = \"\", color=turquoise ]\n    7 -> 10 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    7 -> 13 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    3 -> 13 [ label = \"\", style=dashed ]\n    13 -> 14 [ label = \"\", color=blue,fontcolor=blue ]\n    14 -> 1 [ label = \"\", color=turquoise ]\n    5 -> 15 [ label = \"\", color=blue,fontcolor=blue ]\n    15 -> 2 [ label = \"\", color=turquoise ]\n    5 -> 13 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    13 -> 16 [ label = \"\", color=orange ]\n    3 -> 16 [ label = \"\" ]\n    5 -> 17 [ label = \"\", color=blue,fontcolor=blue ]\n    17 -> 16 [ label = \"\", color=turquoise ]\n    7 -> 18 [ label = \"\", color=blue,fontcolor=blue ]\n    18 -> 16 [ label = \"\", color=turquoise ]\n    9 -> 19 [ label = \"\", color=blue,fontcolor=blue ]\n    19 -> 16 [ label = \"\", color=turquoise ]\n    10 -> 16 [ label = \"\", color=orange ]\n}\n"
---
digraph {
    0 [ root]
    1 [ price]
    2 [ category]
    3 [ products]
    4 [ Root#category]
    5 [ products@Root#category]
    6 [ Root#name]
    7 [ products@Root#name]
    8 [ Root#price]
    9 [ products@Root#price]
    10 [ FedEntity#category]
    11 [ category@FedEntity#category]
    12 [ price@Root#price]
    13 [ FedEntity#price]
    14 [ price@FedEntity#price]
    15 [ category@Root#category]
    16 [ *id]
    17 [ id@Root#category]
    18 [ id@Root#name]
    19 [ id@Root#price]
    0 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "CreateChildResolver", cost=1 ]
    0 -> 4 [ label = "HasChildResolver" ]
    4 -> 5 [ label = "CanProvide", cost=0 ]
    5 -> 3 [ label = "Provides" ]
    0 -> 6 [ label = "CreateChildResolver", cost=1 ]
    0 -> 6 [ label = "HasChildResolver" ]
    6 -> 7 [ label = "CanProvide", cost=0 ]
    7 -> 3 [ label = "Provides" ]
    0 -> 8 [ label = "CreateChildResolver", cost=1 ]
    0 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide", cost=0 ]
    9 -> 3 [ label = "Provides" ]
    3 -> 2 [ label = "Field" ]
    9 -> 10 [ label = "CreateChildResolver", cost=1 ]
    3 -> 10 [ label = "HasChildResolver" ]
    10 -> 11 [ label = "CanProvide", cost=0 ]
    11 -> 2 [ label = "Provides" ]
    3 -> 1 [ label = "Field" ]
    9 -> 12 [ label = "CanProvide", cost=0 ]
    12 -> 1 [ label = "Provides" ]
    7 -> 10 [ label = "CreateChildResolver", cost=1 ]
    7 -> 13 [ label = "CreateChildResolver", cost=1 ]
    3 -> 13 [ label = "HasChildResolver" ]
    13 -> 14 [ label = "CanProvide", cost=0 ]
    14 -> 1 [ label = "Provides" ]
    5 -> 15 [ label = "CanProvide", cost=0 ]
    15 -> 2 [ label = "Provides" ]
    5 -> 13 [ label = "CreateChildResolver", cost=1 ]
    13 -> 16 [ label = "Requires" ]
    3 -> 16 [ label = "Field" ]
    5 -> 17 [ label = "CanProvide", cost=0 ]
    17 -> 16 [ label = "Provides" ]
    7 -> 18 [ label = "CanProvide", cost=0 ]
    18 -> 16 [ label = "Provides" ]
    9 -> 19 [ label = "CanProvide", cost=0 ]
    19 -> 16 [ label = "Provides" ]
    10 -> 16 [ label = "Requires" ]
}
