engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__entities__two_fields-solved-graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"price\" ]\n    2 [ label = \"category\" ]\n    3 [ label = \"products\" ]\n    4 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue ]\n    5 [ label = \"products@Root#category\", shape=box, color=dodgerblue ]\n    8 [ label = \"Root#price\", shape=parallelogram, color=dodgerblue ]\n    9 [ label = \"products@Root#price\", shape=box, color=dodgerblue ]\n    12 [ label = \"price@Root#price\", shape=box, color=dodgerblue ]\n    15 [ label = \"category@Root#category\", shape=box, color=dodgerblue ]\n    0 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 4 [ label = \"\", style=dashed,arrowhead=none ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    5 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 8 [ label = \"\", style=dashed,arrowhead=none ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    3 -> 2 [ label = \"\" ]\n    3 -> 1 [ label = \"\" ]\n    9 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ price]
    2 [ category]
    3 [ products]
    4 [ Root#category]
    5 [ products@Root#category]
    8 [ Root#price]
    9 [ products@Root#price]
    12 [ price@Root#price]
    15 [ category@Root#category]
    0 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "CreateChildResolver" ]
    0 -> 4 [ label = "HasChildResolver" ]
    4 -> 5 [ label = "CanProvide" ]
    5 -> 3 [ label = "Provides" ]
    0 -> 8 [ label = "CreateChildResolver" ]
    0 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 3 [ label = "Provides" ]
    3 -> 2 [ label = "Field" ]
    3 -> 1 [ label = "Field" ]
    9 -> 12 [ label = "CanProvide" ]
    12 -> 1 [ label = "Provides" ]
    5 -> 15 [ label = "CanProvide" ]
    15 -> 2 [ label = "Provides" ]
}
