engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__entities__two_fields-solver.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"price\", style=dashed ]\n    2 [ label = \"category\", style=dashed ]\n    3 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    4 [ label = \"products@Root#category\", shape=box, color=dodgerblue, style=dashed ]\n    5 [ label = \"Root#name\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    6 [ label = \"products@Root#name\", shape=box, color=dodgerblue, style=dashed ]\n    7 [ label = \"Root#price\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    8 [ label = \"products@Root#price\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    10 [ label = \"category@FedEntity#category\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"price@Root#price\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label = \"FedEntity#price\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    13 [ label = \"price@FedEntity#price\", shape=box, color=dodgerblue, style=dashed ]\n    14 [ label = \"category@Root#category\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label = \"*id\", style=dashed ]\n    16 [ label = \"id@Root#category\", shape=box, color=dodgerblue, style=dashed ]\n    17 [ label = \"id@Root#name\", shape=box, color=dodgerblue, style=dashed ]\n    18 [ label = \"id@Root#price\", shape=box, color=dodgerblue, style=dashed ]\n    19 [ label=\"\", style=dashed]\n    0 -> 3 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 5 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 7 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 9 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 12 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 12 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "price", steiner=0 ]
    2 [ label = "category", steiner=0 ]
    3 [ label = "Root#category", steiner=0 ]
    4 [ label = "products@Root#category", steiner=0 ]
    5 [ label = "Root#name", steiner=0 ]
    6 [ label = "products@Root#name", steiner=0 ]
    7 [ label = "Root#price", steiner=0 ]
    8 [ label = "products@Root#price", steiner=0 ]
    9 [ label = "FedEntity#category", steiner=0 ]
    10 [ label = "category@FedEntity#category", steiner=0 ]
    11 [ label = "price@Root#price", steiner=0 ]
    12 [ label = "FedEntity#price", steiner=0 ]
    13 [ label = "price@FedEntity#price", steiner=0 ]
    14 [ label = "category@Root#category", steiner=0 ]
    15 [ label = "*id", steiner=0 ]
    16 [ label = "id@Root#category", steiner=0 ]
    17 [ label = "id@Root#name", steiner=0 ]
    18 [ label = "id@Root#price", steiner=0 ]
    19 [ label="", style=dashed]
    0 -> 3 [ cost=1, steiner=0]
    3 -> 4 [ cost=0, steiner=0]
    0 -> 5 [ cost=1, steiner=0]
    5 -> 6 [ cost=0, steiner=0]
    0 -> 7 [ cost=1, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 9 [ cost=1, steiner=0]
    9 -> 10 [ cost=0, steiner=0]
    10 -> 2 [ cost=0, steiner=0]
    8 -> 11 [ cost=0, steiner=0]
    11 -> 1 [ cost=0, steiner=0]
    6 -> 9 [ cost=1, steiner=0]
    6 -> 12 [ cost=1, steiner=0]
    12 -> 13 [ cost=0, steiner=0]
    13 -> 1 [ cost=0, steiner=0]
    4 -> 14 [ cost=0, steiner=0]
    14 -> 2 [ cost=0, steiner=0]
    4 -> 12 [ cost=1, steiner=0]
    4 -> 16 [ cost=0, steiner=0]
    16 -> 15 [ cost=0, steiner=0]
    6 -> 17 [ cost=0, steiner=0]
    17 -> 15 [ cost=0, steiner=0]
    8 -> 18 [ cost=0, steiner=0]
    18 -> 15 [ cost=0, steiner=0]
    19 -> 0 [ cost=0, steiner=0]
}
